<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vidit! </string>
    <string name="app_id">195281390596562</string>
    <string name="logout">Log out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="abtVidit">About Vidit!</string>
    <string name="search_hint">Search via title,owner</string>
    <string name="title_activity_video_details">Video Details</string>
    <string name="strFrndsVideos"><b>Video By Friends</b></string>
    <string name="strMyVideos"><b>My Videos</b></string>
    <string name="strTagVideos"><b>Tagged Videos</b></string>
    <string name="title_activity_search_result">Search Result</string>

</resources>