<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/searche"
          android:title="@string/search"
          android:icon="@drawable/ic_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search"/>
    
    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>
    
    <item
        android:id="@+id/aboutVidit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/abtVidit"/>
    
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>    

</menu>