<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#3F4142" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="-3dp">

        <Button
    android:id="@+id/btnVideoByFriends"
    android:layout_width="115.5dp"
    android:layout_height="34dp"
    android:layout_marginLeft="-3dp"
    android:layout_marginTop="3dp"
    android:background="#3F4142"
    android:textSize="11sp" 
    android:textColor="#465786"
    android:text="@string/strFrndsVideos" />
        
        <Button
    android:id="@+id/btnVideoByMe"
    android:layout_width="90dp"
    android:layout_height="34dp"
    android:background="#1D1B20"
    android:text="@string/strMyVideos"
    android:textSize="11sp"
    android:textColor="#465786"
    android:layout_marginTop="3dp"
    android:layout_marginLeft="112.5dp" />
        
        <Button
    android:id="@+id/btnTaggedVideo"
    android:layout_width="match_parent"
    android:layout_height="34dp"
    android:textSize="11sp"
    android:text="@string/strTagVideos"
    android:background="#1D1B20"
    android:layout_marginLeft="200dp"
    android:textColor="#465786"
    android:layout_marginTop="3dp"/>
        
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:background="@drawable/upback" >

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:typeface="serif" 
            android:textStyle="bold"/>

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/fbPic"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp" >
        </com.facebook.widget.ProfilePictureView>

        <com.facebook.widget.LoginButton
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_margin="14dp"
            android:layout_toLeftOf="@id/fbPic"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
        
    </RelativeLayout>
    
    <ListView 
        android:id="@+id/lstViewVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F4142"
        android:layout_margin="0dp"
    />

</LinearLayout>
